<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextureView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#121212"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_flip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:clickable="true"
            android:contentDescription="@string/cambiar_camara"
            android:elevation="0dp"
            android:focusable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:theme="@style/Theme.Camera"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_baseline_flip_camera_android_24"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/button_capture_text"
            android:focusable="true"
            app:backgroundTint="#FFFFFF"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_baseline_photo_camera_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:contentDescription="@string/flash"
            android:elevation="0dp"
            android:focusable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:theme="@style/Theme.Camera"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_baseline_flash_on_24"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>